--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -12,10 +12,52 @@
     &__me {
         width: 100%;
         aspect-ratio: 1/1;
+        border-radius: 2rem;
+        background: linear-gradient(45deg, transparent, $color-primary, transparent);
+        display: grid;
+        place-items: center;
 
         &-image {
             border-radius: 2rem;
             overflow: hidden;
+            transform: rotate(10deg);
+            transition: $transition;
+
+            &:hover {
+                transform: rotate(0);
+            }
         }
+    }
+
+    &__cards {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 1.5rem;
+    }
+
+    &__card {
+        background: $color-bg-variant;
+        border: 1px solid transparent;
+        border-radius: 1rem;
+        padding: 2rem;
+        text-align: center;
+        transition: $transition;
+
+        &:hover {
+            background: transparent;
+            border-color: $color-bg-variant;
+            cursor: default;
+        }
+    }
+
+    &__icon {
+        color: $color-primary;
+        font-size: 3rem;
+        margin-bottom: 1rem;
+    }
+
+    &__content p {
+        margin: 2rem 0 2.6rem;
+        font-size: 2rem;
     }
 }
