--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -3,7 +3,7 @@ $container-width-md: 86%;
 $container-width-sm: 90%;
 
 $color-bg: #1f1f38;
-$color-bg-variant: #f0cb95;
+$color-bg-variant: #f7f3e9;
 $color-primary: #4db5ff;
 $color-primary-variant: rgba(77, 181, 255, 0.4);
 $color-white: #fff;
