add styling and contacts for socials

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -45,7 +45,7 @@
 
         &:hover {
             background: transparent;
-            border-color: $color-bg-variant;
+            border-color: $color-primary-variant;
             cursor: default;
         }
     }
