--- a/src/pages/Customize/Customize.scss
+++ b/src/pages/Customize/Customize.scss
@@ -7,7 +7,36 @@
     display: inline-block;
     color: $color-bg;
 
+    &__btn {
+        font-size: 2rem;
+    }
+
     &:hover {
         color: $color-primary;
+    }
+}
+
+.EZDrawer__container {
+    display: flex;
+    flex-direction: column;
+
+    & > a:hover {
+        background: none;
+        color: $color-primary;
+    }
+}
+
+.form {
+    margin-bottom: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    & > input {
+        width: 30%;
+
+        &::placeholder {
+            text-align: center;
+        }
     }
 }
