add modal link, delete for projects

--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -33,3 +33,14 @@
     }
 }
 
+.delete__btn {
+    color: red;
+    cursor: pointer;
+    font-size: 2rem;
+    margin-top: 0.5rem;
+
+    &:hover {
+        transform: scale(2);
+    }
+}
+
