--- a/src/pages/Customize/Customize.scss
+++ b/src/pages/Customize/Customize.scss
@@ -1,17 +1,44 @@
 @use "../../styles/partials/resets";
 @use "../../styles/partials/variables" as *;
 
-.form {
-    margin-bottom: 2rem;
+// .form {
+//     margin-bottom: 2rem;
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+
+//     & > input {
+//         width: 30%;
+
+//         &::placeholder {
+//             text-align: center;
+//         }
+//     }
+// }
+
+.add {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
+    min-height: 90vh;
 
-    & > input {
-        width: 30%;
+    &__icon {
+        position: relative;
+        top: 2.9rem;
+        left: 1rem;
+        font-size: 1.3rem;
+    }
 
-        &::placeholder {
-            text-align: center;
-        }
+}
+
+.input-field {
+    display: flex;
+    justify-content: center;
+}
+
+.top {
+    & > h2 {
+        margin-top: 3rem;
     }
 }
