--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -9,7 +9,12 @@
     margin-bottom: 5rem;
 }
 
+#contact {
+    padding-bottom: 5rem;
+}
+
 .contact {
+    
 
     &__options {
         display: flex;
