add on scroll animation for page load

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,6 +1,10 @@
 @use "../../styles/partials/resets";
 @use "../../styles/partials/variables" as *;
 
+#about {
+    height: 70vh;
+}
+
 .about {
     
     &__container {
