--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -1,6 +1,9 @@
 @use "../../styles/partials/resets";
 @use "../../styles/partials/variables" as *;
 
+#portfolio {
+    height: 70vh;
+}
 
 .portfolio {
 
