--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,8 +1,13 @@
 @use "../../styles/partials/resets";
 @use "../../styles/partials/variables" as *;
+@use "../../styles/partials/mixins" as *;
 
 #about {
     height: 70vh;
+
+    @include tablet {
+        height: initial;
+    }
 }
 
 .about {
@@ -11,6 +16,11 @@
         display: grid;
         grid-template-columns: 35% 50%;
         gap: 15%;
+
+        @include tablet {
+            grid-template-columns: 1fr;
+            gap: 0;
+        }
     }
 
     &__me {
@@ -20,6 +30,16 @@
         background: linear-gradient(45deg, transparent, $color-primary, transparent);
         display: grid;
         place-items: center;
+
+        @include tablet {
+            width: 50%;
+            margin: 2rem auto 4rem;
+        }
+
+        @include mobile {
+            width: 65%;
+            margin: 0 auto 3rem;
+        }
 
         &-image {
             border-radius: 2rem;
@@ -37,6 +57,11 @@
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         gap: 1.5rem;
+
+        @include mobile {
+            grid-template-columns: 1fr;
+            gap: 1rem;
+        }
     }
 
     &__card {
@@ -60,8 +85,22 @@
         margin-bottom: 1rem;
     }
 
+    &__content {
+        @include mobile {
+            text-align: center;
+        }
+    }
+
     &__content p {
         margin: 2rem 0 2.6rem;
         font-size: 2rem;
+
+        @include tablet {
+            margin: 1rem 0 1.5rem;
+        }
+
+        @include mobile {
+            margin: 1.5rem 0;
+        }
     }
 }
