--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -1,5 +1,6 @@
 @use "../../styles/partials/resets";
 @use "../../styles/partials/variables" as *;
+@use "../../styles/partials/mixins" as *;
 
 .container.contact__container {
     width: 58%;
@@ -7,6 +8,15 @@
     grid-template-columns: 38% 58%;
     gap: 12%;
     margin-bottom: 5rem;
+
+    @include tablet {
+        grid-template-columns: 1fr;
+        gap: 2rem;
+    }
+
+    @include mobile {
+        width: $container-width-sm;
+    }
 }
 
 #contact {
