--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -1,5 +1,6 @@
 @use "../../styles/partials/resets";
 @use "../../styles/partials/variables" as *;
+@use "../../styles/partials/mixins" as *;
 
 #experience {
     height: 70vh;
@@ -14,6 +15,13 @@
         border: 1px solid transparent;
         transition: $transition;
 
+        @include tablet {
+            width: 100%;
+            padding: 2rem;
+            margin: 0 auto;
+            padding: 0;
+        }
+
         &:hover {
             border-color: $color-bg;
             cursor: default;
@@ -25,11 +33,21 @@
         grid-template-columns: repeat(6, 1fr);
         gap: 5rem;
         padding: 2rem 1rem;
+
+        @include tablet {
+            padding: 1rem;
+            grid-template-columns: 1fr 1fr;
+            gap: 3rem;
+        }
     }
 
     &__details {
         display: flex;
         gap: 1rem;
+
+        @include tablet {
+            
+        }
 
         &-icon {
             margin-top: 0.8rem;
