--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,3 +1,6 @@
+$tablet-breakpoint: 768px;
+$mobile-breakpoint: 320px;
+
 $container-width-lg: 75%;
 $container-width-md: 86%;
 $container-width-sm: 90%;
